// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button: > should render correctly when type is button 1`] = `
<DocumentFragment>
  <button
    class="button"
    type="button"
  >
    click here
  </button>
</DocumentFragment>
`;

exports[`Button: > should render correctly when type is submit 1`] = `
<DocumentFragment>
  <button
    class="button submit"
    type="submit"
  >
    submit form
  </button>
</DocumentFragment>
`;
